fix grid on tablet

--- a/app/assets/stylesheets/application/components/grid.scss
+++ b/app/assets/stylesheets/application/components/grid.scss
@@ -12,6 +12,10 @@
     padding: 0 12px;
   }
 
+  @include breakpoint-tablet {
+    display: grid;
+  }
+
   &--videos {
     gap: 12px;
 
